fix(feed): fix visibility if user has followed someone but they haven't updated any post yet

--- a/assets/css/tailwind.scss
+++ b/assets/css/tailwind.scss
@@ -815,7 +815,7 @@
   }
 
   .ellipsis-menus {
-    @apply inline-block relative z-30;
+    @apply inline-block relative z-20;
 
     button {
       @apply p-0 m-0;
